# animaclaw

./: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  install.ps1  install.sh  pyproject.toml  run.py
.github/workflows/: ci.yml
anima/: __init__.py  brain.py  cli.py  config.py  events.py  models.py  server.py  task_processor.py  task_templates.py  utils.py
anima/channels/: __init__.py  base.py  discord.py  registry.py  router.py  slack.py  telegram.py
anima/evolution/: __init__.py  engine.py
anima/identity/: __init__.py  engine.py
anima/loop/: __init__.py  mind_loop.py
anima/memory/: __init__.py  knowledge_graph.py  manager.py  store.py
anima/monitor/: __init__.py  behavior.py
anima/providers/: __init__.py  registry.py
anima/question/: __init__.py  tree.py
anima/rules/: __init__.py  engine.py
anima/skills/: registry.py
anima/tools/: __init__.py  bash.py  calendar.py  dispatcher.py  email.py  file_ops.py  forge.py  spreadsheet.py  summarize.py  web_read.py  web_search.py
anima/trust/: __init__.py  system.py
tests/: conftest.py  test_events.py  test_evolution.py  test_knowledge_graph.py  test_memory.py  test_providers.py  test_question_tree.py  test_smoke.py  test_task_processor.py  test_trust.py
web/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: BottomTabs.tsx  ChatPanel.tsx  EmployeeCard.tsx  StatusBar.tsx  ThinkingStream.tsx
web/src/hooks/: useAnima.ts
