[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anima"
version = "0.1.0"
description = "全能型 AI 员工运行时 — 有身份、有记忆、会自我进化"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=21.0",
]
all = [
    "python-telegram-bot>=21.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
anima = "anima.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["anima"]
