[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anima"
version = "0.1.0"
description = "全能型 AI 员工运行时 — 有身份、有记忆、会自我进化"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
telegram = [
    "python-telegram-bot>=21.0",
]
discord = [
    "discord.py>=2.3.0",
]
slack = [
    "slack-bolt>=1.18.0",
    "aiohttp>=3.9.0",
]
all = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.3.0",
    "slack-bolt>=1.18.0",
    "aiohttp>=3.9.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
]

[project.scripts]
anima = "anima.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["anima"]


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["anima"]
omit = ["anima/channels/*", "anima/tools/*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # 行长度由 line-length 控制

[tool.ruff.lint.isort]
known-first-party = ["anima"]
